// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders if Text props is filled with a span emojis 1`] = `
<styled.button>
  <styled.span>
    <span
      aria-label="so cool"
      role="img"
    >
      😀 😎 👍 💯
    </span>
  </styled.span>
</styled.button>
`;

exports[`Button component renders if Text props is provided 1`] = `
<styled.button>
  <styled.span>
    hello
  </styled.span>
</styled.button>
`;

exports[`Button component should render if Text props is filled with emojis 1`] = `
<styled.button>
  <styled.span>
    😀 😎 👍 💯
  </styled.span>
</styled.button>
`;

exports[`Button component should render if Text props is not provided 1`] = `
<styled.button>
  <styled.span />
</styled.button>
`;
